Updated pom and runner